# NEAT

./: CMakeLists.txt
experiments/: experiments.cpp  experiments.h  neatmain.cpp
include/: genome.h  innovation.h  neat.h  population.h  species.h  trait.h
src/: genome.cpp  neat.cpp  network.cpp  population.cpp  species.cpp  trait.cpp
